- handle specific MSCAPI errors (JDK17 feature) and fallback to signing without RSA-PSS when buffer bug/error occurs